--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 .container {
     width: 100%;
     height: 100vh;
-    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("/images/background.jpg");
+    background-image: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("./images/background.jpg");
     background-position: center;
     background-size: cover;
     padding-left: 10%;
